--- a/frontend/src/HomeScreen/HomeScreen.css
+++ b/frontend/src/HomeScreen/HomeScreen.css
@@ -2,6 +2,8 @@
   height: 742px;
   width: 1440px;
   background-image: url(./Images/HomeScreenImage.jpg);
+
+  margin-bottom: 94px;
 }
 .homeBoxBlock {
   width: 403px;
