--- a/frontend/src/Feedback/Feedback.css
+++ b/frontend/src/Feedback/Feedback.css
@@ -2,7 +2,6 @@
   height: 625px;
   width: 1440px;
 
-  padding-left: 165px;
   padding-top: 73px;
 
   display: flex;
@@ -21,4 +20,18 @@
   margin-top: 80px;
 
   display: flex;
+}
+.feedbackTitle {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 60px;
+}
+.feedbackName {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 60px;
 }
