--- a/frontend/src/NewProduct/NewProduct.css
+++ b/frontend/src/NewProduct/NewProduct.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-wrap: wrap;
 }
-.productTitle {
+.productName {
   font-size: 42px;
   line-height: 60px;
   height: 62px;
@@ -16,6 +16,7 @@
 }
 .boxTitle {
   width: 1110px;
+  height: 18px;
 }
 .productItemBox {
   width: 1100px;
@@ -23,4 +24,22 @@
 
   display: flex;
   flex-wrap: wrap;
+}
+.blockTitle {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 60px;
+
+  color: #9a6437;
+}
+.productTitle {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 42px;
+  line-height: 60px;
+
+  color: #1b1a1a;
 }
