--- a/frontend/src/NewProduct/NewProductItems/NewProductItems.css
+++ b/frontend/src/NewProduct/NewProductItems/NewProductItems.css
@@ -28,3 +28,17 @@
 
   background: #f7f7f7;
 }
+.itemName {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+}
+.itemCost {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 28px;
+}
